--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   "devDependencies": {
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
-    "eslint": "7.29.0",
     "eslint-config-next": "^13.1.2",
     "eslint-config-prettier": "^8.6.0",
-    "typescript": "^4.9.4"
+    "eslint": "^8.34.0",
+    "typescript": "^4.9.5"
   }
 }
