--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:watch": "jest --watch",
+    "test:unit": "jest",
+    "test:unit:ci": "jest --runInBand",
   },
   "dependencies": {
     "eslint-plugin-prettier": "^4.2.1",
@@ -21,6 +24,8 @@
     "eslint-config-next": "^13.1.2",
     "eslint-config-prettier": "^8.6.0",
     "eslint": "^8.34.0",
+    "jest-environment-jsdom": "^29.4.2",
+    "jest": "^29.4.2",
     "typescript": "^4.9.5"
   }
 }
