--- a/package.json
+++ b/package.json
@@ -19,10 +19,17 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^14.2.0",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
+    "@types/testing-library__jest-dom": "^5.14.5",
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "@typescript-eslint/parser": "^5.51.0",
     "eslint-config-next": "^13.1.2",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-testing-library": "^5.10.1",
     "eslint": "^8.34.0",
     "jest-environment-jsdom": "^29.4.2",
     "jest": "^29.4.2",
