--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     "eslint": "^8.34.0",
     "jest-environment-jsdom": "^29.4.2",
     "jest": "^29.4.2",
+    "msw": "^1.0.1",
     "typescript": "^4.9.5"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
