--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "concurrently \"npm run test:unit\" \"npm run test:e2e\"",
     "test:watch": "jest --watch",
+    "test:ci": "npm run test:unit:ci && npm run test:e2e:ci",
     "test:unit": "jest",
     "test:unit:ci": "jest --runInBand",
+    "test:e2e": "playwright test",
+    "test:e2e:ci": "CI=true playwright test"
   },
   "dependencies": {
     "eslint-plugin-prettier": "^4.2.1",
@@ -19,6 +23,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.30.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.2.0",
@@ -27,6 +32,7 @@
     "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
+    "concurrently": "^7.6.0",
     "eslint-config-next": "^13.1.2",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-testing-library": "^5.10.1",
