--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/testing-library__jest-dom": "^5.14.5",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
+    "autoprefixer": "^10.4.13",
     "concurrently": "^7.6.0",
     "eslint-config-next": "^13.1.2",
     "eslint-config-prettier": "^8.6.0",
@@ -40,6 +41,8 @@
     "jest-environment-jsdom": "^29.4.2",
     "jest": "^29.4.2",
     "msw": "^1.0.1",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.6",
     "typescript": "^4.9.5"
   },
   "msw": {
